2014-03-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/calendars.cpp: Applied patch by Danilo Dias da Silva to support
	more calendars by adding more than two dozen new identifiers

	* man/Calendars.Rd: Updated accordingly

2014-03-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.12

	* man/FittedBondCurve.Rd: Test for suggested package zoo before use

2014-03-08  Dirk Eddelbuettel  <edd@debian.org>

	* configure: Updated for Rcpp 0.11.0 and later
	* configure.in: Idem

	* src/Makevars.win: Updated for Rcpp 0.11.0 and later

	* R/inline.R (.onLoad): Set a default value of NULL for the QL libs
	and headers, and only override if either the corresponding env.vars
	are set are the quantlib-config script can be found

	* R/inline.R: Only supply LdFlags() and CFlags() results if stored
	values are non-null

2014-02-05  Dirk Eddelbuettel  <edd@debian.org>

	* R/inline.R (.onLoad): No longer need to add LdFlags() from Rcpp to
	PKG_LIBS when preparing ql_libs.
	* R/inline.R (inlineCxxPlugin): Rcpp.plugin.maker() can now be called
	directly as it is imported from Rcpp

	* DESCRIPTION: Add a requirement for Rcpp 0.11.0 or later

	* NAMESPACE: Import Rcpp.plugin.maker from Rcpp

2014-01-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.11

	* R/inline.R: For now, revert to using Rcpp:::Rcpp.plugin.maker() as
	only unreleased Rcpp exports this right now; will use '::' later

2014-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/utils.cpp: Make the epoch-offset between QL and R an internal
	const here, rather than accessing it from R's Date class

	* DESCRIPTION: Update Depends and Imports relationships

	* R/inline.R: Call Rcpp::LdFlags() now that it is exported
	* R/inline.R: Idem for Rcpp::Rcpp.plugin.maker()

	* man/AsianOption.Rd: Indent to less that 90 columns
	* man/BinaryOption.Rd: Idem
	* man/BondUtilities.Rd: Idem
 	* man/Calendars.Rd: Idem
	* man/EuropeanOptionArrays.Rd: Idem
	* man/FixedRateBond.Rd: Idem