@@ -1,3 +1,8 @@
+2014-03-20  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/bonds.cpp (FittedBondCurve): Converted from deprecated
+	FixedRateBondHelper to BondHelper with a FixedRateBond
+
 2014-03-16  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/calendars.cpp: Applied patch by Danilo Dias da Silva to support
